assets/www/default.css
body {
	background-color: #111111;
	color: #eeeeee;
	font-family: tahoma, arial, sans-serif;
	padding-left: 100px;
}

h4 {
	margin-bottom: 1px;
}

ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
	overflow: hidden;
	background-color: #333;
}

li {
	float: left;
}

li:last-child
{
    float: right;
}

li a {
	display: block;
	color: white;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
}

li a:hover:not(.active) {
	background-color: #111;
}

div.smoothie-chart-tooltip {
	background: #444;
	padding: 1em;
	margin-top: 20px;
	font-family: Consolas, monospace;
	color: white;
	font-size: 10px;
	pointer-events: none;
}

button {
	background-color: #4CAF50; /* Green */
	border: none;
	color: white;
	padding: 5px 16px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
  font-size: 12px;
}

button:active {
	background-color: #ACFF00;
}

canvas {
	width: 100%;
       height: 100px;
}

.clock {
  font-size: 2em;
}

.video-canvas {
	width: 100%;
	height: 100%
}
.active {
	background-color: #4CAF50;
}

.grid {
  position: relative;
}
.item {
  display: block;
  position: absolute;
  width: 30%;
	height: 150px;
	margin: 5px;
  z-index: 1;
  background: #000;
  color: #fff;
}
.item.muuri-item-dragging {
	z-index: 3;
	background: blue;
}
.item.muuri-item-releasing {
	z-index: 2;
	background: blueViolet;
}
.item.muuri-item-hidden {
  z-index: 0;
}
.item-content {
  position: relative;
  width: 100%;
  height: 100%;
}

.slider {
  -webkit-appearance: none;
  width: 100%;
  height: 15px;
  border-radius: 5px;
  background: #d3d3d3;
  outline: none;
  opacity:0.7;
  -webkit-transition: opacity .15s ease-in-out;
  transition: opacity .15s ease-in-out;
}
.slider:hover {
  opacity:1;
}
.slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background: #4CAF50;
  cursor: pointer;
}
.slider::-moz-range-thumb {
  width: 25px;
  height: 25px;
  border: 0;
  border-radius: 50%;
  background: #4CAF50;
  cursor: pointer;
}

.sliderVal {
  font-size: 12px;
  font-weight:bold;
  color:red
}

.support {
  display: none;
}
.notsupported {
  display: block;
  font-weight: bold;
  text-align: center;
  padding: var(--default-padding-half);
  background-color: var(--material-red-500);
  color: white;
}

